[metadata]
name = photobinner-tpalko
version = 0.0.1
author = Tim Palko
author_email = tim@palkosoftware.com
description = Organize image files by year and date, preserving descriptive text from existing folders
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tpalko/photo-binner
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNUv3 License
    Operating System :: OS Independent

[options]
#package_dir =
#    = src
#packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    pb = photobinner.photobinner:main

[options.packages.find]
where = src
